Astrid's first changes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
     <title>Kat and Astrid's Game Room</title>
     <link rel="stylesheet" href="style-reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 </head>
 <body>
-    <h1>Hello World</h1>
+
+    <header>    
+        <h1>Kat and Astrid's Game Room!</h1>
+    </header>
+
+<div class="gen-container">
+
+    <div class="btn-container">
+
+        <div class="game-btn">
+            <img src="images/tic-tac-toe-svgrepo-com.svg" alt="">
+        </div>
+        <div class="game-btn">
+            <img src="images/hand-svgrepo-com.svg" alt="" style="transform:rotate(90deg)">
+        </div>
+        <div class="game-btn"></div>
+        <div class="game-btn"></div>
+        <div class="game-btn"></div>
+
+    </div>
+
+    <div class="gameboard"></div>
+
+
+</div>
 </body>
 </html>
