Astrid Second Game Board

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <div class="tic-tac-box border-left-right"></div>
             <div class="tic-tac-box"></div>
         </div>
+
+        <div class="rock-paper-scissors-container">
+            <div class="rock-paper-scissors-box">Player 1 Box</div>
+            <div class="rock-paper-scissors-box">Player 2 Box</div>
+
+        </div>
     </div>
         
     </div>
