--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kat and Astrid's Game Room</title>
+    <title>Astrid's Game Room</title>
     <link rel="stylesheet" href="style-reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -12,12 +12,14 @@
 <body>
 
     <header>    
-        <h1>Kat and Astrid's Game Room!</h1>
+        <h1>Astrid's Game Room!</h1>
     </header>
 
 <div class="gen-container">
 
     <div class="btn-container">
+
+        <div class="quit-button">Quit Game</div>
 
         <div class="game-btn" id="tic-tac-toe-btn">
             <img src="images/tic-tac-toe-svgrepo-com.svg" alt="">
@@ -33,19 +35,34 @@
 
     <div class="gameboard">
 
-        <div class="tic-tac-container">
-            <div class="tic-tac-box"></div>
-            <div class="tic-tac-box border-left-right"></div>
-            <div class="tic-tac-box"></div>
-            <div class="tic-tac-box border-top-bottom"></div>
-            <div class="tic-tac-box border-left-right border-top-bottom"></div>
-            <div class="tic-tac-box border-top-bottom"></div>
-            <div class="tic-tac-box"></div>
-            <div class="tic-tac-box border-left-right"></div>
-            <div class="tic-tac-box"></div>
+        <div class="scorecard">
+
+            <div id="scorecard-1" class="scorecard-container">
+                <h2>Player 1
+                    <p>0</p>
+                </h2>
+            </div>
+
+            <div id="scorecard-2" class="scorecard-container">
+                <h2>Player 2
+                    <p>0</p>
+                </h2>
+            </div>
         </div>
 
-        <div class="rock-paper-scissors-container">
+        <div id="tic-tac-container" class="game-container">
+            <div id="tic-tac-box-1" class="tic-tac-box" onclick="addXO(this)"></div>
+            <div id="tic-tac-box-2" class="tic-tac-box border-left-right" onclick="addXO(this)"></div>
+            <div id="tic-tac-box-3" class="tic-tac-box" onclick="addXO(this)"> </div>
+            <div id="tic-tac-box-4" class="tic-tac-box border-top-bottom" onclick="addXO(this)"> </div>
+            <div id="tic-tac-box-5" class="tic-tac-box border-left-right border-top-bottom" onclick="addXO(this)"></div>
+            <div id="tic-tac-box-6" class="tic-tac-box border-top-bottom" onclick="addXO(this)"></div>
+            <div id="tic-tac-box-7" class="tic-tac-box" onclick="addXO(this)"></div>
+            <div id="tic-tac-box-8" class="tic-tac-box border-left-right" onclick="addXO(this)"> </div>
+            <div id="tic-tac-box-9" class="tic-tac-box" onclick="addXO(this)"> </div>
+        </div>
+
+        <div id="rock-paper-scissors-container" class="game-container">
             <div class="rock-paper-scissors-box">Player 1 Box</div>
             <div class="rock-paper-scissors-box">Player 2 Box</div>
 
