--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <h1>Astrid's Game Room!</h1>
     </header>
 
+    <div class="modal hidden">
+
+        <h2>Player # Wins!</h2>
+        <p>Would you like to play again?</p>
+        <div class="btn-container-modal">
+            <button class="btn-modal btn-play-again">Play Again</button>
+            <button class="btn-modal btn-quit-game">Quit to Main Menu</button>
+        </div>
+        
+    </div>
+
 <div class="gen-container">
 
     <div class="btn-container">
@@ -48,6 +59,10 @@
                     <p>0</p>
                 </h2>
             </div>
+        </div>
+
+        <div class="modal">
+            <h2></h2>
         </div>
 
         <div id="tic-tac-container" class="game-container">
